syntax = "proto3";
package models;

message ProdModel{
    int32 ProdID = 1;
    string ProdName=2;
}

message ProdsRequest{
    int32 size=1;
}

message ProdListResponse{
    repeated ProdModel data=1;
}