syntax = "proto3";
package Services;

import "Models.proto";

message ProdsRequest{
    int32 size=1;
    int32 prod_id=2;
}

message ProdListResponse{
    repeated ProdModel data=1;
}

message ProdDetailResponse{
    ProdModel data=1;
}
service ProdService{
    rpc GetProdsList(ProdsRequest) returns (ProdListResponse);
    rpc GetProdDetail(ProdsRequest) returns (ProdDetailResponse);
}